correct layout issues in safari

--- a/src/css/enterprise/_01-intro.css
+++ b/src/css/enterprise/_01-intro.css
@@ -1,27 +1,3 @@
 & section.intro {
-  padding-bottom: 0;
-  background: var(--white);
-  text-align: center;
-
-  & .diagram {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    background: url("../assets/images/bg-main.png") repeat;
-    background-position: top center;
-    transform: translateY(1px);
-
-    & author-icon {
-      flex: 1;
-      width: unset;
-      height: unset;
-    }
-
-    @chassis vp-width > medium {
-      transform: none;
-    }
-  }
+  
 }
